Yeun.zhang 2016-02-01 版本 1.3.2.4 涉及修改内容：软键盘与界面之间错乱的问题

--- a/res/layout/activity_about.xml
+++ b/res/layout/activity_about.xml
@@ -161,7 +161,7 @@
                         android:layout_centerVertical="true"
                         android:layout_marginRight="@dimen/l_r_35"
                         android:layout_toLeftOf="@id/iv_setting_clear_cache"
-                        android:text="55"
+                        android:text=""
                         android:textColor="@color/app_green1" />
                     <!--  android:layout_alignBottom="@id/iv_setting_clear_cache" -->
                 </RelativeLayout>
