--- a/res/drawable/main_btn_shape.xml
+++ b/res/drawable/main_btn_shape.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" >
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle" >
+    
     <solid android:color="@color/white" />
     <stroke
         android:width="1dp"
         android:color="#2000" />
     <corners
-        android:bottomLeftRadius="20dp"
-        android:bottomRightRadius="20dp"
-        android:topLeftRadius="20dp"
-        android:topRightRadius="20dp" />
+        android:radius="15dp"/>
     <padding 
-        android:left="30dp"
-        android:right="30dp"
-        android:top="5dp"
-        android:bottom="5dp"
-        />
+        
+        android:top="7dp"
+        android:bottom="7dp"
+        /><!--android:left="30dp"
+        android:right="30dp"  -->
 </shape>
