--- a/res/layout/activity_activity_tip_item_inner_item.xml
+++ b/res/layout/activity_activity_tip_item_inner_item.xml
@@ -29,11 +29,11 @@
         android:textColor="#6F6F6F" 
         android:lineSpacingExtra="6dp"
         android:textIsSelectable="true"
-        android:autoLink="web|email|phone" 
+        android:autoLink="web|email|phone"
         android:textColorLink="@color/update_text_tittle_green"
         android:gravity="left"
         android:singleLine="false"
-        android:text="什么叫乱七八糟什么叫乱七八糟什么叫乱七八糟什么叫乱七八糟什么叫乱七八糟什么叫乱七八糟什么叫乱七八糟什么叫乱七八糟什么叫乱"/>
+        android:text=""/><!-- android:autoLink="web|email|phone"   -->
     
 </RelativeLayout>
 
