--- a/res/layout/activity_feedback.xml
+++ b/res/layout/activity_feedback.xml
@@ -22,13 +22,14 @@
 
         <TextView
             android:id="@+id/tv_feedback_title"
-            android:textSize="17sp"
+           android:text="返回萨法"
+            style="@style/text_style_big_40"
             android:layout_width="wrap_content"
             android:layout_centerVertical="true"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_centerInParent="true"
-            android:textColor="@color/app_green2" />
+            android:textColor="@color/app_green2" /><!-- android:textSize="17sp"  -->
         <TextView 
             android:id="@+id/btn_feedback_commit"
             android:layout_centerVertical="true"
@@ -42,7 +43,7 @@
             />
     </RelativeLayout>
     <TextView
-        style="@style/line_style_2"
+        style="@style/line_style_1"
         />
     <EditText
         android:id="@+id/et_feedback_content"
