--- a/res/layout/dialog_random_num.xml
+++ b/res/layout/dialog_random_num.xml
@@ -49,9 +49,13 @@
             android:layout_marginTop="@dimen/margin_top_35"
             android:text="960886"
             android:textColor="@color/command_new" 
-            android:textSize="55dp"/><!--  android:paddingLeft="5dp"
-            android:paddingRight="5dp"   
-            android:typeface="sans"  android:layout_marginBottom="@dimen/margin_top_20" android:textScaleX="1.2"-->
+            android:textSize="55dp"/>
+        <!--   android:paddingLeft="5dp"
+	           android:paddingRight="5dp"   
+	           android:typeface="sans"  android:layout_marginBottom="@dimen/margin_top_20" 
+	           android:textScaleX="1.2"   android:visibility="gone"-->
+     
+         
         
         <TextView
             android:visibility="gone"
