Yeun.zhang 2016-02-16 版本 1.3.3.2 涉及修改内容：多城市定位切换的问题、抽取框架中的代码达到多进程并发

--- a/res/layout/activity_found.xml
+++ b/res/layout/activity_found.xml
@@ -22,7 +22,7 @@
                 android:layout_height="@dimen/home_ad_h" >
 
                <!--  <com.android.pc.ioc.image.RecyclingImageView -->
-               <ImageView
+               <com.android.pc.ioc.image.RecyclingImageView
                     android:id="@+id/iv_found_bg"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
