--- a/res/layout/activity_home_old.xml
+++ b/res/layout/activity_home_old.xml
@@ -96,11 +96,11 @@
             </RelativeLayout>
             
             
-             <com.stylingandroid.snowfall.SnowView
-                 android:id="@+id/snow_view"
+             <!-- <com.stylingandroid.snowfall.SnowView
+                    android:id="@+id/snow_view"
 				    android:layout_width="match_parent"
 				    android:layout_height="match_parent"
-				    />
+				    /> -->
         </FrameLayout>
 
         <!-- 底部的四个按钮 -->
