--- a/res/layout/my_secretary_question_item.xml
+++ b/res/layout/my_secretary_question_item.xml
@@ -98,7 +98,7 @@
         </LinearLayout>
     </LinearLayout>
 
-    <TextView style="@style/line_style_2" />
+    <!-- <TextView style="@style/line_style_2" /> -->
 
     <TextView
         android:id="@+id/question"
@@ -109,7 +109,7 @@
         android:ellipsize="end"
         android:lineSpacingExtra="5dp"
         android:maxLines="2"
-        android:text="问题:" />
+        android:text="问题：  " />
 
     <TextView style="@style/line_style_2" />
 
@@ -121,6 +121,6 @@
         android:ellipsize="end"
         android:lineSpacingExtra="5dp"
         android:maxLines="2"
-        android:text="回复:" />
+        android:text="回复：  " />
 
 </LinearLayout>
