--- a/res/layout/my_secretary_question_item.xml
+++ b/res/layout/my_secretary_question_item.xml
@@ -38,27 +38,65 @@
             android:layout_marginLeft="10dp"
             android:layout_weight="1"
             android:orientation="vertical" >
-
+            
+            
+            
+       <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            
             <TextView
+                android:text="迈界"
                 android:id="@+id/my_question_title_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="16sp" />
 
-           <TextView
-                android:id="@+id/my_question_type_tv"
+
+            <TextView
+                android:layout_alignParentRight="true"
+                android:id="@+id/my_question_time"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/rectangle_background_gray_text_secretary_details"
-                android:gravity="center"
-                android:text="213"
-                android:textSize="12dp" 
-                android:textColor="@color/text_gray2"
-		       	android:paddingTop="3dp"
-		       	android:paddingBottom="3dp"
-		       	android:paddingLeft="5dp"
-		       	android:paddingRight="5dp"/>
+                android:layout_height="wrap_content" 
+                android:text="1970-09-01"
+                android:textColor="@color/text_gray4"/>
+            
+          </RelativeLayout> 
+            
+            
+            
+            
+            
+         <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            
+            android:layout_marginTop="5dp"
+            android:orientation="horizontal" >    
+	           <TextView
+	                android:id="@+id/my_question_type_tv"
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:background="@drawable/rectangle_background_gray_text_secretary_details"
+	                android:gravity="center"
+	                android:text="0000"
+	                android:textSize="12dp" 
+	                android:textColor="@color/text_gray2"
+			       	android:paddingTop="3dp"
+			       	android:paddingBottom="3dp"
+			       	android:paddingLeft="5dp"
+			       	android:paddingRight="5dp"/>
+	             <TextView
+	                android:layout_alignParentRight="true"
+	                android:id="@+id/have_information"
+	                android:layout_width="10dp"
+	                android:layout_height="10dp"
+	                android:background="@drawable/circle_shape_infor_center"
+	                android:layout_centerVertical="true"
+	                /><!--android:visibility="invisible"   -->
+          </RelativeLayout>  
+                
+                
 	        <!-- <TextView
 		        android:visibility="gone"
 		        android:id="@+id/tv_conversation_title"
@@ -77,25 +115,7 @@
 		       	android:paddingRight="5dp"/> -->
         </LinearLayout>
 
-        <LinearLayout
-            style="@style/w_wrap_h_wrap"
-            android:layout_gravity="top"
-            android:gravity="center_horizontal"
-            android:orientation="vertical" >
-
-            <TextView
-                android:id="@+id/my_question_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" 
-                android:textColor="@color/text_gray4"/>
-
-            <TextView
-                android:id="@+id/have_information"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:background="@drawable/circle_shape_infor_center"
-                android:visibility="invisible" />
-        </LinearLayout>
+       
     </LinearLayout>
 
     <!-- <TextView style="@style/line_style_2" /> -->
