--- a/res/layout/activity_about.xml
+++ b/res/layout/activity_about.xml
@@ -59,7 +59,7 @@
                         android:id="@+id/bt_close"
                         android:layout_width="120dp"
                         android:layout_height="120dp"
-                        android:src="@drawable/icon_redpack1" />
+                        android:src="@drawable/app_icon_0222" />
 
                     <TextView
                         android:id="@+id/tv_about_qmyo_version"
