--- a/res/layout/activity_home_banner.xml
+++ b/res/layout/activity_home_banner.xml
@@ -192,13 +192,40 @@
         </LinearLayout>
     </LinearLayout>
 
-    <TextView
+    
+    
+   <!--<TextView
         android:id="@+id/home_hot_v16"
         style="@style/text_style_nomal_30"
         android:layout_gravity="center"
         android:layout_marginBottom="@dimen/margin_top_35"
         android:layout_marginTop="@dimen/margin_top_30"
         android:text="@string/home_hot_v16"
-        android:textColor="@color/text_gray2" />
+        android:textColor="@color/text_gray2" /> -->
+    
+    <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="horizontal" >
+
+        <ProgressBar
+            android:id="@+id/pb_loading"
+            style="?android:attr/progressBarStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" 
+             android:layout_marginBottom="@dimen/margin_top_35"
+	        android:layout_marginTop="@dimen/margin_top_30"
+            android:layout_marginRight="5dp"/>
+
+        <TextView
+	        android:id="@+id/home_hot_v16"
+	        style="@style/text_style_nomal_30"
+	        android:layout_gravity="center"
+	        android:layout_marginBottom="@dimen/margin_top_35"
+	        android:layout_marginTop="@dimen/margin_top_30"
+	        android:text="@string/home_hot_v16"
+	        android:textColor="@color/text_gray2" />
+        </LinearLayout>
 
 </LinearLayout>
