--- a/res/layout/activity_person_cent.xml
+++ b/res/layout/activity_person_cent.xml
@@ -54,7 +54,37 @@
     </RelativeLayout>
 
     <View style="@style/line_style_1" />
+    <RelativeLayout
+        android:id="@+id/iv_person_phone_num"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/bottom_menu_h"
+        android:layout_marginLeft="@dimen/l_r_35"
+        android:layout_marginRight="@dimen/l_r_35"
+        android:background="@color/app_white" >
 
+        <TextView
+            style="@style/text_style_nomal_28"
+            android:layout_centerVertical="true"
+            android:text="@string/mine_phone"
+            android:textColor="@color/text_gray1" />
+        <com.android.pc.ioc.image.RecyclingImageView
+            android:id="@+id/arrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            /><!-- android:visibility="gone"    android:src="@drawable/arrow_r"  -->
+		<TextView
+		    android:id="@+id/tv_my_phone_num"
+            style="@style/text_style_nomal_28"
+            android:layout_centerVertical="true"
+            android:text="18255369344"
+            android:layout_toLeftOf="@id/arrow"
+            android:layout_marginRight="@dimen/l_r_35" />
+		
+    </RelativeLayout>
+
+    <View style="@style/line_style_1" />
     <RelativeLayout
         android:id="@+id/iv_person_center_nickname"
         android:layout_width="match_parent"
