--- a/res/layout/puzzy_fragment.xml
+++ b/res/layout/puzzy_fragment.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/w_match_h_match"
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+    android:background="@color/app_bg">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/puzzy_search_list"
         android:padding="10dp"
