Yeun.zhang 2016-02-26 版本 1.3.4.4
涉及修改内容：小秘书推送功能完成

--- a/res/layout/activity_experience_search.xml
+++ b/res/layout/activity_experience_search.xml
@@ -73,8 +73,7 @@
                 <TextView
                     android:id="@+id/tv_search_card"
                     style="@style/text_style_nomal_28"
-                    android:layout_marginLeft="10dp"
-                    android:text="@string/register_click"
+                    android:text="@string/register_click_first"
                     android:textColor="@color/app_white" />
             </LinearLayout>
         </RelativeLayout>
