--- a/res/layout/activity_mine.xml
+++ b/res/layout/activity_mine.xml
@@ -124,22 +124,24 @@
                             android:gravity="center_horizontal"
                             android:orientation="vertical" >
 
-                            <RelativeLayout style="@style/w_wrap_h_wrap" >
+                            <FrameLayout style="@style/w_match_h_match" 
+                                android:layout_gravity="center">
 
                                 <com.android.pc.ioc.image.RecyclingImageView
                                     android:id="@+id/meggage_icon2"
                                     style="@style/w_wrap_h_wrap"
+                                    android:layout_gravity="center"
                                     android:background="@drawable/message" />
 
                                 <TextView
                                     android:id="@+id/have_information"
-                                    android:layout_width="15dp"
-                                    android:layout_height="15dp"
-                                    android:visibility="gone"
-                                    android:layout_marginLeft="-20dp"
-                                    android:layout_toRightOf="@id/meggage_icon2"
-                                    android:background="@drawable/circle_shape_infor_center" />
-                            </RelativeLayout>
+                                    style="@style/text_green_point_big"
+			                        android:textSize="10sp"
+			                        android:layout_gravity="center_horizontal"
+			                        android:layout_marginLeft="20dp"
+			                        android:visibility="gone"
+                                    /><!-- android:layout_marginLeft="-20dp" android:layout_toRightOf="@id/meggage_icon2" -->
+                            </FrameLayout>
 
                             <TextView
                                 style="@style/text_style_small_26"
@@ -185,12 +187,12 @@
 
                     <TextView
                         android:id="@+id/have_secretary"
-                        android:layout_width="15dp"
-                        android:layout_height="15dp"
-                        android:visibility="gone"
+                        style="@style/text_green_point_big"
+                        android:textSize="10sp"
                         android:layout_centerVertical="true"
                         android:layout_alignParentRight="true"
-                        android:background="@drawable/circle_shape_infor_center" />
+                        android:visibility="gone"
+                         /><!--android:visibility="gone"  -->
                 </RelativeLayout>
             </LinearLayout>
 
