--- a/res/layout/activity_secretary.xml
+++ b/res/layout/activity_secretary.xml
@@ -266,10 +266,9 @@
                 <TextView
                     android:id="@+id/have_information"
                     android:layout_toRightOf="@id/ll_secretary_setting"
-                    android:layout_width="10dp"
-                    android:visibility="gone"
-                    android:layout_height="10dp"
-                    android:background="@drawable/circle_shape" />
+                    style="@style/text_green_point_big"
+                    android:textSize="10sp"
+                    /><!--android:visibility="gone"  -->
 
                 <LinearLayout
                     android:id="@+id/ll_secretary_help"
