--- a/res/layout/my_secretary_question_item.xml
+++ b/res/layout/my_secretary_question_item.xml
@@ -89,8 +89,9 @@
 	             <TextView
 	                android:layout_alignParentRight="true"
 	                android:id="@+id/have_information"
-	                android:layout_width="10dp"
-	                android:layout_height="10dp"
+	                android:layout_width="12dp"
+	                android:layout_height="12dp"
+	                android:text=" "
 	                android:background="@drawable/circle_shape_infor_center"
 	                android:layout_centerVertical="true"
 	                /><!--android:visibility="invisible"   -->
