--- a/res/layout/activity_mainfrag.xml
+++ b/res/layout/activity_mainfrag.xml
@@ -28,11 +28,12 @@
 	    android:layout_width="match_parent"
         android:layout_height="wrap_content"
 	   > 
-	 <LinearLayout 
+<!-- 	 <LinearLayout 
 	    android:id="@+id/ll_bottom"
 	    android:layout_width="match_parent"
         android:layout_height="wrap_content"
-	    android:orientation="vertical"><!-- android:layout_weight="0"  -->
+	    android:orientation="vertical"> -->
+	    <!-- android:layout_weight="0"  -->
 
 		    <View
 		        android:id="@+id/line_bottom"
@@ -41,17 +42,22 @@
 		        android:background="@color/line_bg1" />
 		
 		    <LinearLayout
+		        android:layout_below="@id/line_bottom"
+		        
 		        android:id="@+id/bottom_menu"
 		        android:layout_width="match_parent"
 		        android:layout_height="@dimen/bottom_menu_h"
 		        android:background="@color/app_white" >
 		
+		        
 		        <LinearLayout
 		            android:id="@+id/bottom_home"
+		            android:layout_weight="1"
+		            android:layout_height="@dimen/bottom_menu_h"
 		            style="@style/w_weight_h_wrap"
 		            android:layout_gravity="center"
-		            android:layout_weight="1"
-		            android:orientation="vertical" >
+		            android:gravity="center_vertical"
+		            android:orientation="vertical" ><!-- style="@style/w_weight_h_wrap" -->
 		
 		            <com.android.pc.ioc.image.RecyclingImageView
 		                android:id="@+id/iv_home_icon"
@@ -69,12 +75,18 @@
 		                android:text="@string/home"
 		                android:textColor="@color/text_nomal" />
 		        </LinearLayout>
+		        
+		        
+		        
+		        
 		
 		        <LinearLayout
 		            android:id="@+id/bottom_secretary"
 		            style="@style/w_weight_h_wrap"
-		            android:layout_gravity="center"
 		            android:layout_weight="1"
+		            android:layout_height="@dimen/bottom_menu_h"
+		            android:layout_gravity="center"
+		            android:gravity="center_vertical"
 		            android:orientation="vertical" >
 		
 		            <com.android.pc.ioc.image.RecyclingImageView
@@ -94,11 +106,22 @@
 		                android:textColor="@color/text_nomal" />
 		        </LinearLayout>
 		
+		        
+		        
+		        
+		        
+		        
+		        
+		        
+		        
+		        
 		        <LinearLayout
 		            android:id="@+id/bottom_found"
 		            style="@style/w_weight_h_wrap"
-		            android:layout_gravity="center"
 		            android:layout_weight="1"
+		            android:layout_height="@dimen/bottom_menu_h"
+		            android:layout_gravity="center"
+		            android:gravity="center_vertical"
 		            android:orientation="vertical" >
 		
 		            <com.android.pc.ioc.image.RecyclingImageView
@@ -119,19 +142,34 @@
 		                android:textColor="@color/text_nomal" />
 		        </LinearLayout>
 		
+		        
+		        
+		        
+		        
+		        
+		        
+		        
+		        
+		        
+		        
+		        
 		     <LinearLayout
 		            android:id="@+id/bottom_mine"
 		            style="@style/w_weight_h_wrap"
-		            android:layout_gravity="center"
 		            android:layout_weight="1"
+		            android:layout_height="@dimen/bottom_menu_h"
+		            android:layout_gravity="center"
+		            android:gravity="center_vertical"
 		            android:orientation="vertical" >
 		
-		           <RelativeLayout 
+		           <FrameLayout 
+		               android:id="@+id/rl_my"
 		               style="@style/w_match_h_match"
 		               android:gravity="center"
 		               >
 		               
 		             <LinearLayout 
+		                 android:layout_gravity="center"
 		                android:id="@+id/ll_mineicon"
 		                style="@style/w_wrap_h_wrap"
 			            android:orientation="vertical" >
@@ -152,19 +190,58 @@
 			                android:textColor="@color/text_nomal" />
 		            </LinearLayout>  
 		            
-			        <TextView
-				            android:id="@+id/point"
-				            android:layout_alignRight="@id/ll_mineicon"
-				            android:layout_width="10dp"
-				            android:layout_height="10dp"
-				            android:background="@drawable/circle_shape"
-				            android:visibility="gone"
-				            /> <!-- android:text=""   android:textColor="@android:color/white"  android:textSize="10sp"  -->
-		           </RelativeLayout>
+		              <TextView
+			             android:id="@+id/point"
+			             style="@style/text_green_point_big"
+			             android:text="@string/green_point_counts"
+			             android:textSize="10sp" 
+			             android:layout_gravity="center_horizontal"
+			             android:layout_marginLeft="15dp"
+			             android:visibility="gone"
+			             /> 
+			             <!--android:layout_marginTop="-10dp"
+			             android:layout_marginLeft="-5dp"  -->
+		           </FrameLayout>
 		           
 		        </LinearLayout>
+		        
+		     
+		     
+		     
+		     
+		     
+		     
+		     
+		     
+		     
+		     
+		     
+		     
+		        
+		     
 		    </LinearLayout>
-		</LinearLayout>
+		    
+	<!-- 	</LinearLayout> -->
+		
+<!-- 	  <TextView
+			             android:id="@+id/point"
+			             style="@style/text_green_point_big"
+			             android:text="@string/green_point_counts"
+			             android:textSize="12sp" 
+			             android:layout_toRightOf="@id/ll_mineicon"
+			             android:layout_alignParentTop="true"
+			             android:layout_marginTop="-10dp"
+			             android:layout_marginLeft="-5dp"/> 
+	                     
+	                     android:layout_alignRight="@id/ll_mineicon"
+	                     android:paddingLeft="10dp"
+	                     android:paddingRight="10dp"
+	                     android:paddingTop="5dp"
+	                     android:paddingBottom="5dp"
+	                     android:visibility="gone" 
+	                     android:background="@drawable/circle_shape"  
+				         style="@style/text_style_green_point" -->
+	 
 	 </RelativeLayout>	
 	 <!-- </LinearLayout> -->
 </LinearLayout>
