--- a/res/layout/activity_register.xml
+++ b/res/layout/activity_register.xml
@@ -14,13 +14,14 @@
 
     
     <!-- 云图被压在最底下作为背景图 -->
-    <!--  <com.lansun.qmyo.view.CloudView
+   <!--    <com.lansun.qmyo.view.CloudView
         android:id="@+id/iv_register_bg"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" /> --> 
+        android:layout_height="match_parent" />  -->
    
    <!-- 借用秘书页的动态背景，两个为同一个背景 -->
-   <com.ryanharter.viewpager.ViewPager
+   <com.ryanharter.viewpager.NoTouchViewPager
+       
        android:id="@+id/vp_sercretary_bg_pager"
        style="@style/w_match_h_match"
        android:focusable="false"
