--- a/res/layout/activity_secretary.xml
+++ b/res/layout/activity_secretary.xml
@@ -268,7 +268,8 @@
                     android:layout_toRightOf="@id/ll_secretary_setting"
                     style="@style/text_green_point_big"
                     android:textSize="10sp"
-                    /><!--android:visibility="gone"  -->
+                    android:visibility="gone"
+                    /><!--  -->
 
                 <LinearLayout
                     android:id="@+id/ll_secretary_help"
